# penny-cli

./: .env.example  .gitignore  QUICKSTART.md  README.md  ROADMAP.md  pyproject.toml  requirements.txt  setup.py
.claude/: settings.local.json
config/: categories.yaml  prompts.yaml
src/ai/: claude_client.py
src/cli/: formatters.py  main.py
src/cli/commands/: account.py  budget.py  category.py  check.py  import_export.py  purchase.py  recurring.py  report.py  savings.py  tag.py  transaction.py  user.py
src/core/: exceptions.py
src/core/services/: account_service.py  analytics_service.py  auth_service.py  budget_service.py  decision_support_service.py  planned_purchase_service.py  recurring_service.py  savings_goal_service.py  transaction_service.py
src/data/migrations/: 002_recurring_charges.sql  004_tags.sql  005_user_auth.sql  006_planned_purchases.sql
src/data/repositories/: planned_purchase_repo.py  recurring_repo.py  tag_repo.py  transaction_repo.py  user_repo.py
src/utils/: config.py  container.py  csv_handler.py
